# linear-programming

./: Makefile  README.md  pyproject.toml
examples/: diet.py
linprog/: data_classes.py  dual_simplex_solvers.py  dual_solvers.py  exceptions.py  general_solvers.py  preprocessing.py  primal_dual_alogrithm.py  primal_simplex_solvers.py  primal_solvers.py  simplex.py  special_solvers.py  tableau.py  utils.py
src/: tableau.py  tableau_test.py
src/linearprogramming/: base_solvers.py  dual_simplex_solvers.py  general_solvers.py  primal_dual_alogrithm.py  primal_simplex_solvers.py  simplex.py  simplex_solvers.py  tableau.py
src/linprog/: dual_simplex_solvers.py  general_solvers.py  tableau.py
tests/: constants.py  problems.py  simplex_test.py  tableau_test.py  test_dual_base_solvers.py  test_general_solvers.py  test_primal_base_solvers.py  test_primal_dual_algorithm.py  test_simplex_solvers.py  test_simplex_with_bounded_variables.py  test_solvers.py  utils.py
